--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.algorithmx</groupId>
+    <groupId>org.rulii</groupId>
     <artifactId>rulii</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -10,11 +10,11 @@
     <name>Rulii</name>
     <description>Business Rule Engine</description>
     <url>https://github.com/algox/rulii</url>
-    <inceptionYear>2024</inceptionYear>
+    <inceptionYear>2025</inceptionYear>
 
     <organization>
         <name>algorithmx</name>
-        <url>http://algorithmx.com</url>
+        <url>http://www.algorithmx.com</url>
     </organization>
 
     <issueManagement>
@@ -39,7 +39,7 @@
         <logback.classic.version>1.5.3</logback.classic.version>
         <log4j.verion>2.23.1</log4j.verion>
         <slf4j.version>2.0.12</slf4j.version>
-        <junit.version>4.13.1</junit.version>
+        <junit.version>5.11.4</junit.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <apache.commons.verion>3.9</apache.commons.verion>
 
@@ -87,8 +87,8 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
